[gd_scene load_steps=3 format=2]

[ext_resource path="res://Map.gd" type="Script" id=1]
[ext_resource path="res://UI.gd" type="Script" id=2]

[node name="Map" type="Node"]
script = ExtResource( 1 )
map_size = Vector2( 30, 30 )

[node name="CollapseTimer" type="Timer" parent="."]
wait_time = 0.05

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 2, 0 )
projection = 1
current = true
size = 3.0

[node name="UI" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 2 )

[node name="StartCollapse" type="Button" parent="UI"]
margin_left = 83.0
margin_top = 528.0
margin_right = 193.0
margin_bottom = 590.0
text = "Start Collapse"

[node name="CollapseStep" type="Button" parent="UI"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 242.0
margin_top = 491.0
margin_right = 350.0
margin_bottom = 551.0
text = "Collapse Step"

[node name="PlayOutCollapse" type="Button" parent="UI"]
margin_left = 391.0
margin_top = 531.0
margin_right = 521.0
margin_bottom = 591.0
text = "Play Out Collapse"

[node name="InspectTile" type="Button" parent="UI"]
margin_left = 539.0
margin_top = 527.0
margin_right = 640.0
margin_bottom = 584.0
text = "Inspect Tile"

[node name="InspectTileConnections" type="Button" parent="UI"]
margin_left = 666.0
margin_top = 526.0
margin_right = 878.0
margin_bottom = 583.0
text = "Inspect Tile Connections"

[node name="TileList" type="ItemList" parent="UI"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 220.0
margin_top = 57.0
margin_right = 601.0
margin_bottom = 388.0

[connection signal="timeout" from="CollapseTimer" to="." method="_on_CollapseTimer_timeout"]
[connection signal="pressed" from="UI/StartCollapse" to="UI" method="_on_StartCollapse_pressed"]
[connection signal="pressed" from="UI/CollapseStep" to="UI" method="_on_CollapseStep_pressed"]
[connection signal="pressed" from="UI/PlayOutCollapse" to="UI" method="_on_PlayOutCollapse_pressed"]
[connection signal="pressed" from="UI/InspectTile" to="UI" method="_on_InspectTile_pressed"]
[connection signal="pressed" from="UI/InspectTileConnections" to="UI" method="_on_InspectTileConnections_pressed"]
[connection signal="item_selected" from="UI/TileList" to="UI" method="_on_TileList_item_selected"]
